; ModuleID = '/home/carl/AnghaBench/openssl/crypto/dso/extr_dso_lib.c_DSO_up_ref.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/dso/extr_dso_lib.c_DSO_up_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@DSO_F_DSO_UP_REF = common dso_local global i32 0, align 4
@ERR_R_PASSED_NULL_PARAMETER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"DSO\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DSO_up_ref(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = icmp eq %struct.TYPE_4__* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @DSO_F_DSO_UP_REF, align 4
  %9 = load i32, i32* @ERR_R_PASSED_NULL_PARAMETER, align 4
  %10 = call i32 @DSOerr(i32 %8, i32 %9)
  store i32 0, i32* %2, align 4
  br label %31

11:                                               ; preds = %1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @CRYPTO_UP_REF(i32* %13, i32* %4, i32 %16)
  %18 = icmp sle i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %31

20:                                               ; preds = %11
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = call i32 @REF_PRINT_COUNT(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), %struct.TYPE_4__* %21)
  %23 = load i32, i32* %4, align 4
  %24 = icmp slt i32 %23, 2
  %25 = zext i1 %24 to i32
  %26 = call i32 @REF_ASSERT_ISNT(i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = icmp sgt i32 %27, 1
  %29 = zext i1 %28 to i64
  %30 = select i1 %28, i32 1, i32 0
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %20, %19, %7
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @DSOerr(i32, i32) #1

declare dso_local i64 @CRYPTO_UP_REF(i32*, i32*, i32) #1

declare dso_local i32 @REF_PRINT_COUNT(i8*, %struct.TYPE_4__*) #1

declare dso_local i32 @REF_ASSERT_ISNT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
